Styled using tailwind css

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 
 </head>
 <body>
-<header>
-    <nav>
-        <h2> LekhaSuchi</h2>
-        <ul>
-            <li> Orderbook</li>
-            <li> Riderbook </li>
-            <li> Outletbook</li>
-            <button>Login</button>
-        </ul>
+<header class="flex justify-between items-center px-8 py-6">
+    
+       <h1 class="text-3xl font-bold italic">LekhaSuchi</h1>
+        <nav class="space-x-6">
+       <a href="#" class="font-medium hover:text-indigo-600">Orderbook</a>
+       <a href="#" class="font-medium hover:text-indigo-600">Riderbook </a>
+       <a href="#" class="font-medium hover:text-indigo-600">Outletbook</a>
+
+            <button class="bg-indigo-600 text-white px-5 py-2 rounded-lg font-semibold hover:bg-indigo-700">Login</button>
+       
     </nav>
 </header>
 
